feat: complete modern codebase upgrade, ML continuous intelligence, and full-stack enhancements
Squash merge of branch refactor/modernize-codebase:
- Full-stack modernization: decoupled service architecture, strict record DTOs, and global exception handling
- Robust continuous ML learning system: TF-IDF & transformer pipelines, Hugging Face CPU retraining automation, and feedback ingestion loop
- Complete test suites: RestAssured API integration tests, Cucumber BDD specs, unit tests, and Playwright regressions
- Mobile app upgrades: synchronized Expo dependencies, real-time push notifications, offline retry handlers, and UI parity
- Security hardening: CSRF/CSP configuration, passkey/WebAuthn lifecycle, and public unauthenticated error pages
- Comprehensive SEO, PWA manifest, and high-fidelity Open Graph branding assets